--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 
 <title>Guide about Motorcycle & Whiplash Compensation QLD</title>
+  <meta name="google-site-verification" content="G-Nnw7y5Or2wzlN0Ok-IjhbK2sEggE-Dcl-dBmTujoA" />
+  <link rel="canonical" href="https://whiplash-compensation-qld.netlify.app/">
 
 <meta name="description" content="Injured on a bike? Learn how to navigate the Australian legal system, from CTP insurance to whiplash claims and settlement payouts.">
 
@@ -191,3 +193,4 @@ While optional, legal representation significantly improves outcomes.</p>
 
 </body>
 </html>
+
